--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/style-resources": "^1.2.1",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.16.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@nuxtjs/eslint-config": "^8.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@vue/test-utils": "^1.3.0",
@@ -32,6 +34,10 @@
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-vue": "^8.2.0",
     "jest": "^27.4.4",
+    "nuxt-fontawesome": "^0.4.0",
+    "nuxt-sass-resources-loader": "^2.0.5",
+    "sass": "^1.45.2",
+    "sass-loader": "^10.2.0",
     "vue-jest": "^3.0.4"
   }
 }
